--- a/index.html
+++ b/index.html
@@ -28,12 +28,7 @@ Jan - March, 2023
 	  </td>
 
 	   <td>
-	   <a href="#study"> Study Material </a>
-
-	   </td>
-
-	   <td>
-	   <a href="#lecture"> Classes </a>
+	   <a href="#topics"> Topics </a>
 	  </td>
 <!--
 	  <td>
@@ -102,7 +97,7 @@ There are no prerequisites for this course, except for logical thinking, and som
 </center>
 </p>
 
-<li> <font size=4> <a name="lectures_covered"> Topics covered: </a> </font> 
+<li> <font size=4> <a name="topics"> Topics covered: </a> </font> 
 
 
    <center>
