--- a/index.html
+++ b/index.html
@@ -298,9 +298,9 @@ There are no prerequisites for this course, except for logical thinking, and som
                   
                    <tr>
                             <td align=middle> <p>
-                              <i> Assignment I</i> (not active yet)
+                              <i> <a href="https://drive.google.com/file/d/1cKKbuIx_fjcVt1_yU3LVT2RZzV5G6WJE/view?usp=share_link">Assignment I</a></i>
                               </p></td>
-                            <td align=middle> Jan. 22 </td>
+                            <td align=middle> Jan. 23 </td>
                             
                          </tr>
                   </table>
@@ -313,3 +313,4 @@ There are no prerequisites for this course, except for logical thinking, and som
    March 9 - April 9, 2023 
 </p>
 </p>
+
