--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ There are no prerequisites for this course, except for logical thinking, and som
                                <li>Algorithms and Implementation -- <i> <a href="https://colab.research.google.com/drive/1BcmWAmnhIgM4nG5oLcpbHDTnXHcd_sd-?usp=share_link">colab</a></i>.</li>
       </p>
       <p>                  
-                              <li>Nested loops -- <i> <a href="https://colab.research.google.com/drive/1Calft0DF0ptTP-ofcP1JOStvU8mVO-L2?usp=share_link">colab</a></i>.</li>
+                              <li>Nested loops -- <i> <a href="https://colab.research.google.com/drive/1Calft0DF0ptTP-ofcP1JOStvU8mVO-L2?usp=share_link">colab_1</a></i>, <i> <a href="https://colab.research.google.com/drive/10lG7neBdpeETo34SJP0ESBDO2VnBazKc?usp=share_link">colab_2</a></i>.</li>
       </p>
    </ul>
 </li>
